fixing checkstyle